cleaned up client communicator